Update SendNotificationService.java